fixed z-index for bbth links

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -47,7 +47,7 @@
     }
     
     #project1Container {
-        z-index: 4;
+        z-index: 40;
         display: flex;
         align-items: center;
         width: 100vw;
